src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_53.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<DockPanel
            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
>
    <Button Name="hi there">Hello world</Button>
</DockPanel>
</Page>
